Wrote the CSS for our character's website (and changed some HTML)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Zagreus</title>
     <link rel="icon" href="img/zag-icon.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
     <!-- header element -->
@@ -17,7 +19,7 @@
         <p>Zagreus, Prince of the Underworld, is the son of Hades and is the protagonist of the game Hades. Zagreus has always had a sense that he doesn't belong in the House of Hades.
         </p>
         <img src="img/Zag-big.jpg">
-        <p>Zag in Action</p>
+        <p class="caption">Zag in Action</p>
 
         <!-- Characteristics -->
         <h2>Zag's Characteristics</h2>
